force-app/main/default/objects/All_Agreement__c/All_Agreement__c.object-meta.xml
<CustomObject>
    <label>All Agreement</label>
    <nameField>
        <displayFormat>AAGR-{000000000}</displayFormat>
        <label>All Agreement Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>All Agreements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>