force-app/main/default/objects/All_Agreement__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project</label>
    <referenceTo>strk__Project__c</referenceTo>
    <relationshipLabel>All Agreements</relationshipLabel>
    <relationshipName>All_Agreements</relationshipName>
    <type>Lookup</type>
</CustomField>