force-app/main/default/objects/All_Agreement__c/fields/Project_Acceptance__c.field-meta.xml
<CustomField>
    <fullName>Project_Acceptance__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project Acceptance</label>
    <referenceTo>Project_Acceptance__c</referenceTo>
    <relationshipLabel>All Agreements</relationshipLabel>
    <relationshipName>All_Agreements</relationshipName>
    <type>Lookup</type>
</CustomField>