force-app/main/default/objects/All_Agreement__c/fields/Related_Agreement__c.field-meta.xml
<CustomField>
    <fullName>Related_Agreement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Agreement</label>
    <referenceTo>Related_Agreement__c</referenceTo>
    <relationshipLabel>All Agreements</relationshipLabel>
    <relationshipName>All_Agreements</relationshipName>
    <type>Lookup</type>
</CustomField>