force-app/main/default/objects/All_Agreement__c/fields/Site_ID__c.field-meta.xml
<CustomField>
    <fullName>Site_ID__c</fullName>
    <formula>IF(Agreement__c == null , Project__r.strk__Site__r.Site_ID__c, Agreement__r.Project__r.strk__Site__r.Site_ID__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Site ID</label>
    <type>Text</type>
</CustomField>