force-app/main/default/objects/All_Agreement__c/fields/Site_Name__c.field-meta.xml
<CustomField>
    <fullName>Site_Name__c</fullName>
    <formula>IF(Agreement__c == null, HYPERLINK(&quot;/&quot; &amp; Project__r.strk__Site__c, 
Project__r.strk__Site__r.Name, &apos;_self&apos;), HYPERLINK(&quot;/&quot; &amp; Agreement__r.Project__r.strk__Site__c, 
Agreement__r.Project__r.strk__Site__r.Name, &apos;_self&apos;) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Site Name</label>
    <type>Text</type>
</CustomField>