force-app/main/default/objects/All_Agreement__c/fields/Site_Status__c.field-meta.xml
<CustomField>
    <fullName>Site_Status__c</fullName>
    <formula>IF(Agreement__c == null , TEXT(Project__r.strk__Site__r.strk__Site_Status__c), 
TEXT(Agreement__r.Project__r.strk__Site__r.strk__Site_Status__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Site Status</label>
    <type>Text</type>
</CustomField>